--- a/bower.json
+++ b/bower.json
@@ -10,6 +10,7 @@
   ],
   "dependencies": {
     "purescript-console": "^3.0.0",
-    "purescript-halogen": "^2.0.0"
+    "purescript-halogen": "^2.0.0",
+    "purescript-random": "^3.0.0"
   }
 }
