--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
     "browser-sync": "^2.18.13",
     "foreman": "^2.0.0",
     "webpack": "^3.6.0"
+  },
+  "dependencies": {
+    "aws-sdk": "^2.132.0"
   }
 }
