--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "private": true,
   "scripts": {
-    "build": "pulp build --to dist/app.js",
-    "watch": "pulp -w build --to dist/app.js",
+    "build": "pulp browserify --to dist/app.js",
+    "watch": "pulp -w browserify --to dist/app.js",
     "watch-fast": "webpack --entry ./entry.js --output-filename dist/app.js --progress --watch",
-    "browse": "browser-sync start --server --ss 'dist' --files 'dist/**/*'",
+    "browse": "browser-sync start --server 'dist' --files 'dist/**/*.html' 'dist/app.js'",
     "dev": "nf start"
   },
   "devDependencies": {
