replace browser-sync with live-server.

--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
     "build": "pulp browserify --to dist/app.js",
     "watch": "pulp -w browserify --to dist/app.js",
     "watch-fast": "webpack --entry ./entry.js --output-filename dist/app.js --progress --watch",
-    "browse": "browser-sync start --server 'dist' --files 'dist/**/*.html' 'dist/app.js'",
+    "browse": "live-server dist --watch *.js,*.css,*.html --igrnoe .*",
     "dev": "nf start"
   },
   "devDependencies": {
-    "browser-sync": "^2.18.13",
     "foreman": "^2.0.0",
+    "live-server": "^1.2.0",
     "webpack": "^3.6.0"
   },
   "dependencies": {
